Part 3 — Host-based Routing & PathType/04-ingress-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-default

spec:
  DefaultBackend:
    service:
      name: webapp-svc
      port:
        number: 80

  ingressClassName: nginx
  
  rules:
  
  - host: myapp.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-svc
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 80

      - path: /admin
        pathType: Exact
        backend:
          service:
            name: admin-svc
            port:
              number: 80
